refactor - make squares container always square

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   </div>
 
   <div class='bar'>
-    <h2 class='accuracy'>100%</h2>
-    <h2 class='time'>3</h2>
+    <p class='accuracy'>100%</p>
+    <p class='timer'>3</p>
   </div>
   <div class='border'>
     <div class='squares'></div>
