refactor file structure, fix overlapping click/touchstart events

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Template</title>
 
-  <link href="css/css.css" rel="stylesheet">
+  <link href="css.css" rel="stylesheet">
 </head>
 <body>
 
@@ -49,6 +49,6 @@
     <p class='end-accuracy'></p>
   </div>
 
-  <script src="js/js.js"></script>
+  <script src="js.js"></script>
 </body>
 </html>
