clean up results css

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </div>
 
   <div class='results'>
-    <h2>Results:</h2>
+    <h2 class='title'>Results:</h2>
     <p class='end-square-size'></p>
     <p class='end-hit-miss'></p>
     <p class='end-accuracy'></p>
