implement level progression draft

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <div class='bar'>
     <p class='accuracy'>100%</p>
     <p class='timer'>3</p>
+    <p class='level'>1/10</p>
   </div>
   <div class='border'>
     <div class='squares'></div>
@@ -44,9 +45,13 @@
 
   <div class='results'>
     <h2 class='title'>Results:</h2>
-    <p class='end-square-size'></p>
-    <p class='end-hit-miss'></p>
-    <p class='end-accuracy'></p>
+    <div class='stats'>
+      <p class='end-level'></p>
+      <p class='end-square-size'></p>
+      <p class='end-hit-miss'></p>
+      <p class='end-accuracy'></p>
+    </div>
+    <div class='btn next'>NEXT</div>
   </div>
 
   <script src="js.js"></script>
