--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
 <body>
 
   <div class='menu'>
-    <div class='title'><h1>AccuTouch</h1></div>
+    <div class='title'>
+      <h1>AccuTouch</h1>
+      <p>
+        How small can a button get before it's too small?<br>
+        Let's find out. Tap the colored squares. Try not to miss.
+      </p>
+    </div>
     <div class='play-btn'>
-      <div class='btn'>PLAY</div>
+      <div class='btn'>START</div>
     </div>
     <!-- <div class='settings-btn btn'>SETTINGS</div> -->
   </div>
