--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>HTML Template</title>
+  <title>Accutouch</title>
+  <meta name="description" content="A UI Experiment">
 
   <link href="css.css" rel="stylesheet">
 </head>
@@ -58,6 +59,10 @@
       <p class='end-accuracy'></p>
     </div>
     <div class='btn next'>NEXT</div>
+    <div class='gold-star'>
+      <p class='msg'></p>
+      <img src='tile.png'>
+    </div>
   </div>
 
   <script src="js.js"></script>
